fixing background color display on mobile

--- a/css/viz1.css
+++ b/css/viz1.css
@@ -49,6 +49,7 @@ body {
 
 #page-content {
 	padding-top: 80px;
+	background-color: #EEECE7;
 }
 
 #proj-name {
